# gRpc_server

./: Cargo.toml  README.md  build.rs  login.proto
proto/: login.proto  payments.proto
src/: client.rs  main.rs  server.rs
src/proto/: login.rs
