[package]
name = "gRpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic= "0.6"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path= "src/server.rs"